modules/org.restlet.www/learn/2.1/userguide/Status service-202.md
Status service
==============

Introduction
============

This service handles error statuses. If an exception is thrown within
your application or Restlet code, it will be intercepted by this service
if it is enabled.

When an exception or an error is caught, the [getStatus(Throwable,
Request,
Response)](http://web.archive.org/web/20120122020742/http://www.restlet.org/documentation/2.1/jee/api/org/restlet/service/StatusService.html#getStatus%28java.lang.Throwable,%20org.restlet.Request,%20org.restlet.Response%29)
method is first invoked to obtain the status that you want to set on the
response. If this method isn't overridden or returns null, the
[Status.SERVER\_ERROR\_INTERNAL](http://web.archive.org/web/20120122020742/http://www.restlet.org/documentation/2.1/jee/api/org/restlet/data/Status.html#SERVER_ERROR_INTERNAL)
constant will be set by default.

Also, when the status of a response returned is an error status (see
[Status.isError()](http://web.archive.org/web/20120122020742/http://www.restlet.org/documentation/2.1/jee/api/org/restlet/data/Status.html#isError%28%29),
the [getRepresentation(Status, Request,
Response)](http://web.archive.org/web/20120122020742/http://www.restlet.org/documentation/2.1/jee/api/org/restlet/service/StatusService.html#getRepresentation%28org.restlet.data.Status,%20org.restlet.Request,%20org.restlet.Response%29)
method is then invoked to give your service a chance to override the
default error page.

If you want to customize the default behavior, you need to create a
subclass of StatusService that overrides some or all of the methods
mentioned above. Then, just create a instance of your class and set it
on your Component or Application via the setStatusService() methods.

Display error pages
===================

Another common requirement is the ability to customize the status pages
returned when something didn't go as expected during the call handling.
Maybe a resource was not found or an acceptable representation isn't
available? In this case, or when any unhandled exception is be
intercepted, the Application or the Component will automatically provide
a default status page for you. This service is associated to the
org.restlet.util.StatusService class, which is accessible as an
Application and Component property called "statusService".

In order to customize the default messages, you will simply need to
create a subclass of StatusService and override the
getRepresentation(Status, Request, Response) method. Then just set an
instance of your custom service to the appropriate "statusService"
property.

[Comments
(2)](http://web.archive.org/web/20120122020742/http://wiki.restlet.org/docs_2.1/13-restlet/27-restlet/331-restlet/202-restlet.html#)

Comments
[Hide](http://web.archive.org/web/20120122020742/http://wiki.restlet.org/docs_2.1/13-restlet/27-restlet/331-restlet/202-restlet.html#)
\

Created by Namho Kim on 11/11/11 5:56:04 AM

org.restlet.util.StatusService class changed to
org.restlet.service.StatusService

Created by Jerome Louvel on 11/11/11 12:18:52 PM

Thanks, I just fixed all links

Add a comment

Please log in to be able to add comments.
